[package]
name = "gooseberry-tm"
version = "0.1.0"
authors = ["Ninjani"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntect = "3.3.0"
crossterm = "0.10"
thiserror = "1.0"
anyhow = "1.0.17"
itertools = "0.8.0"
chrono = { version = "0.4.9", features = ["serde"] }
path_abs = "0.5.0"
lazy_static = "1.4.0"
glob = "0.3.0"
unicode-width = "0.1.6"
#ropey = "1.1.0"
confy = "0.3.1"
serde = "1.0.102"
serde_derive = "1.0.102"
directories = "2.0.2"

[dependencies.tui]
version = "0.6.2"
default-features = false
features = ['crossterm']